Utils rewrite, new db managers